# parley

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  fly.toml  pyproject.toml  render.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ROADMAP.md  dogfood-01-p2p-escrow.md  dogfood-02-early-lease-exit.md
docs/brand/: brand.md  calibration-linear.md  og-card.html  preview.html  proofcard-v2.html  tokens.css
docs/specs/: 01-preferences.md  02-agent.md  03-consensus.md  04-transcript.md  05-spec.md  06-net-identity.md  07-net-bot.md  08-net-client.md  09-net-profiles.md  10-voice-gateway.md  11-voice-brain.md  12-voice-policy.md  README.md
examples/: meeting.py  redteam_probe_baseline.py  run_env.py
examples/demo/: index.html  proofcard.py  proofcard_p2p.html  recipe_committee.json  recipe_contract_terms.json  recipe_dao.json  recipe_dao_treasury.json  recipe_early_lease_exit.json  recipe_kyc.json  (+9 more)
parley/: agent.py  consensus.py  preferences.py  spec.py  transcript.py
scripts/: ship-gate.sh
tests/: test_agent.py  test_consensus.py  test_demo_server.py  test_deploy_config.py  test_identity.py  test_meeting_json.py  test_net.py  test_preferences.py  test_real_decision_recipes.py  test_redteam.py  test_redteam_consensus.py  test_spec.py  test_transcript.py  test_voice_brain.py  test_voice_gateway.py
voice/: README.md  __init__.py  brain.py  gateway.py  policy.py
(+20 files in other folders)
