[project]
name = "parley"
version = "0.1.0"
description = "Consensus among personal AI agents that faithfully represent owners with conflicting private interests — deterministic red-line enforcement + verifiable transcripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # core is zero-dependency, pure stdlib
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.urls]
Repository = "https://github.com/5uper0/parley"
Homepage = "https://github.com/5uper0/parley"

[project.optional-dependencies]
crypto = ["pynacl>=1.5"]   # Ed25519 signed Agent Cards + verdicts (net layer)
dev = ["pytest>=8", "pynacl>=1.5"]
# The voice layer (voice/) is stdlib-only: the brain calls OpenRouter's OpenAI-compatible
# endpoint over urllib, so there is no extra to install.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parley"]

[tool.pytest.ini_options]
testpaths = ["tests"]
